# probir

./: .clinerules  .env.example  .gitignore  README.md  pipeline.yaml  probir.py  pyproject.toml  start_proxy.sh
memory-bank/: consolidated_learnings.md  raw_reflection_log.md  task_progress.md
src/: common_utils.py  create_hf_dataset.py  extract_valid_traces.py  inspect_db.py  probir.py  push_hf_dataset.py  run_pipeline.py  step1_anonymize_data.py  step1b_anonymize_llm.py  step1c_session_aware_llm_anonymize.py  step2_score_complexity.py  step2b_identify_sessions.py  step3_analyze_correction_patterns.py
tests/: test_S1_identify_sessions.py  test_S2_anonymize_regex.py  test_S3_anonymize_llm_session_aware.py  test_S4_score_complexity.py  test_S5_analyze_correction_patterns.py  test_common_utils.py  test_run_pipeline.py  test_step1b_anonymize_llm.py  test_step2_score_complexity.py  test_step2b_identify_sessions.py  test_step3_analyze_correction_patterns.py
tests/test_helpers/: dummy_step.py
